WorkflowParser.py
# Generated from Workflow.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class WorkflowParser ( Parser ):

    grammarFileName = "Workflow.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'borrow'", "'return'", "'reserve'", 
                     "'extend'", "<INVALID>", "'define'", "'update'", "'query'", 
                     "'select'", "'where'", "'if'", "'then'", "'else'", 
                     "'with'", "'set'", "'true'", "'false'", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "';'", "','", "'('", "')'", 
                     "'{'", "'}'", "'->'", "'='", "'*'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "BORROW", "RETURN", "RESERVE", 
                      "EXTEND", "MARK_LOST", "DEFINE", "UPDATE", "QUERY", 
                      "SELECT", "WHERE", "IF", "THEN", "ELSE", "WITH", "SET", 
                      "TRUE", "FALSE", "ITEM_ID", "MEMBER_ID", "COMPARISON", 
                      "LOGICAL_OP", "STRING", "DATE", "NUMBER", "ID", "COMMENT", 
                      "COMMENT_LINE", "WS", "SEMICOLON", "COMMA", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "ARROW", "EQ", "STAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_defineStmt = 2
    RULE_txnStmt = 3
    RULE_action = 4
    RULE_target = 5
    RULE_updateStmt = 6
    RULE_queryStmt = 7
    RULE_selectClause = 8
    RULE_selectFields = 9
    RULE_whereClause = 10
    RULE_ifStmt = 11
    RULE_condition = 12
    RULE_expression = 13
    RULE_fieldList = 14
    RULE_fieldAssign = 15
    RULE_paramList = 16
    RULE_paramAssign = 17
    RULE_field = 18
    RULE_value = 19

    ruleNames =  [ "program", "statement", "defineStmt", "txnStmt", "action", 
                   "target", "updateStmt", "queryStmt", "selectClause", 
                   "selectFields", "whereClause", "ifStmt", "condition", 
                   "expression", "fieldList", "fieldAssign", "paramList", 
                   "paramAssign", "field", "value" ]

    EOF = Token.EOF
    T__0=1
    BORROW=2
    RETURN=3
    RESERVE=4
    EXTEND=5
    MARK_LOST=6
    DEFINE=7
    UPDATE=8
    QUERY=9
    SELECT=10
    WHERE=11
    IF=12
    THEN=13
    ELSE=14
    WITH=15
    SET=16
    TRUE=17
    FALSE=18
    ITEM_ID=19
    MEMBER_ID=20
    COMPARISON=21
    LOGICAL_OP=22
    STRING=23
    DATE=24
    NUMBER=25
    ID=26
    COMMENT=27
    COMMENT_LINE=28
    WS=29
    SEMICOLON=30
    COMMA=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    ARROW=36
    EQ=37
    STAR=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(WorkflowParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkflowParser.StatementContext)
            else:
                return self.getTypedRuleContext(WorkflowParser.StatementContext,i)


        def getRuleIndex(self):
            return WorkflowParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = WorkflowParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5116) != 0):
                self.state = 40
                self.statement()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(WorkflowParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def defineStmt(self):
            return self.getTypedRuleContext(WorkflowParser.DefineStmtContext,0)


        def SEMICOLON(self):
            return self.getToken(WorkflowParser.SEMICOLON, 0)

        def txnStmt(self):
            return self.getTypedRuleContext(WorkflowParser.TxnStmtContext,0)


        def updateStmt(self):
            return self.getTypedRuleContext(WorkflowParser.UpdateStmtContext,0)


        def queryStmt(self):
            return self.getTypedRuleContext(WorkflowParser.QueryStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(WorkflowParser.IfStmtContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = WorkflowParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.defineStmt()
                self.state = 49
                self.match(WorkflowParser.SEMICOLON)
                pass
            elif token in [2, 3, 4, 5, 6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 51
                self.txnStmt()
                self.state = 52
                self.match(WorkflowParser.SEMICOLON)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.updateStmt()
                self.state = 55
                self.match(WorkflowParser.SEMICOLON)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.queryStmt()
                self.state = 58
                self.match(WorkflowParser.SEMICOLON)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 5)
                self.state = 60
                self.ifStmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefineStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEFINE(self):
            return self.getToken(WorkflowParser.DEFINE, 0)

        def ID(self):
            return self.getToken(WorkflowParser.ID, 0)

        def ITEM_ID(self):
            return self.getToken(WorkflowParser.ITEM_ID, 0)

        def LBRACE(self):
            return self.getToken(WorkflowParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(WorkflowParser.RBRACE, 0)

        def fieldList(self):
            return self.getTypedRuleContext(WorkflowParser.FieldListContext,0)


        def MEMBER_ID(self):
            return self.getToken(WorkflowParser.MEMBER_ID, 0)

        def getRuleIndex(self):
            return WorkflowParser.RULE_defineStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefineStmt" ):
                listener.enterDefineStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefineStmt" ):
                listener.exitDefineStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDefineStmt" ):
                return visitor.visitDefineStmt(self)
            else:
                return visitor.visitChildren(self)




    def defineStmt(self):

        localctx = WorkflowParser.DefineStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defineStmt)
        self._la = 0 # Token type
        try:
            self.state = 78
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 63
                self.match(WorkflowParser.DEFINE)
                self.state = 64
                self.match(WorkflowParser.ID)
                self.state = 65
                self.match(WorkflowParser.ITEM_ID)
                self.state = 66
                self.match(WorkflowParser.LBRACE)
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 67
                    self.fieldList()


                self.state = 70
                self.match(WorkflowParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 71
                self.match(WorkflowParser.DEFINE)
                self.state = 72
                self.match(WorkflowParser.MEMBER_ID)
                self.state = 73
                self.match(WorkflowParser.LBRACE)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==26:
                    self.state = 74
                    self.fieldList()


                self.state = 77
                self.match(WorkflowParser.RBRACE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TxnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def action(self):
            return self.getTypedRuleContext(WorkflowParser.ActionContext,0)


        def target(self):
            return self.getTypedRuleContext(WorkflowParser.TargetContext,0)


        def WITH(self):
            return self.getToken(WorkflowParser.WITH, 0)

        def paramList(self):
            return self.getTypedRuleContext(WorkflowParser.ParamListContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_txnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTxnStmt" ):
                listener.enterTxnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTxnStmt" ):
                listener.exitTxnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTxnStmt" ):
                return visitor.visitTxnStmt(self)
            else:
                return visitor.visitChildren(self)




    def txnStmt(self):

        localctx = WorkflowParser.TxnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_txnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.action()
            self.state = 81
            self.target()
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==15:
                self.state = 82
                self.match(WorkflowParser.WITH)
                self.state = 83
                self.paramList()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ActionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BORROW(self):
            return self.getToken(WorkflowParser.BORROW, 0)

        def RETURN(self):
            return self.getToken(WorkflowParser.RETURN, 0)

        def RESERVE(self):
            return self.getToken(WorkflowParser.RESERVE, 0)

        def EXTEND(self):
            return self.getToken(WorkflowParser.EXTEND, 0)

        def MARK_LOST(self):
            return self.getToken(WorkflowParser.MARK_LOST, 0)

        def getRuleIndex(self):
            return WorkflowParser.RULE_action

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAction" ):
                listener.enterAction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAction" ):
                listener.exitAction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAction" ):
                return visitor.visitAction(self)
            else:
                return visitor.visitChildren(self)




    def action(self):

        localctx = WorkflowParser.ActionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_action)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 124) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TargetContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(WorkflowParser.ID, 0)

        def ITEM_ID(self):
            return self.getToken(WorkflowParser.ITEM_ID, 0)

        def MEMBER_ID(self):
            return self.getToken(WorkflowParser.MEMBER_ID, 0)

        def ARROW(self):
            return self.getToken(WorkflowParser.ARROW, 0)

        def getRuleIndex(self):
            return WorkflowParser.RULE_target

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTarget" ):
                listener.enterTarget(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTarget" ):
                listener.exitTarget(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTarget" ):
                return visitor.visitTarget(self)
            else:
                return visitor.visitChildren(self)




    def target(self):

        localctx = WorkflowParser.TargetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_target)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(WorkflowParser.ID)
                self.state = 89
                self.match(WorkflowParser.ITEM_ID)
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.match(WorkflowParser.MEMBER_ID)
                self.state = 91
                self.match(WorkflowParser.ARROW)
                self.state = 92
                self.match(WorkflowParser.ID)
                self.state = 93
                self.match(WorkflowParser.ITEM_ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UpdateStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def UPDATE(self):
            return self.getToken(WorkflowParser.UPDATE, 0)

        def target(self):
            return self.getTypedRuleContext(WorkflowParser.TargetContext,0)


        def SET(self):
            return self.getToken(WorkflowParser.SET, 0)

        def fieldList(self):
            return self.getTypedRuleContext(WorkflowParser.FieldListContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_updateStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdateStmt" ):
                listener.enterUpdateStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdateStmt" ):
                listener.exitUpdateStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitUpdateStmt" ):
                return visitor.visitUpdateStmt(self)
            else:
                return visitor.visitChildren(self)




    def updateStmt(self):

        localctx = WorkflowParser.UpdateStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_updateStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(WorkflowParser.UPDATE)
            self.state = 97
            self.target()
            self.state = 98
            self.match(WorkflowParser.SET)
            self.state = 99
            self.fieldList()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QueryStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUERY(self):
            return self.getToken(WorkflowParser.QUERY, 0)

        def selectClause(self):
            return self.getTypedRuleContext(WorkflowParser.SelectClauseContext,0)


        def whereClause(self):
            return self.getTypedRuleContext(WorkflowParser.WhereClauseContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_queryStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQueryStmt" ):
                listener.enterQueryStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQueryStmt" ):
                listener.exitQueryStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQueryStmt" ):
                return visitor.visitQueryStmt(self)
            else:
                return visitor.visitChildren(self)




    def queryStmt(self):

        localctx = WorkflowParser.QueryStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_queryStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(WorkflowParser.QUERY)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 102
                self.selectClause()


            self.state = 106
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 105
                self.whereClause()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SELECT(self):
            return self.getToken(WorkflowParser.SELECT, 0)

        def selectFields(self):
            return self.getTypedRuleContext(WorkflowParser.SelectFieldsContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_selectClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectClause" ):
                listener.enterSelectClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectClause" ):
                listener.exitSelectClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectClause" ):
                return visitor.visitSelectClause(self)
            else:
                return visitor.visitChildren(self)




    def selectClause(self):

        localctx = WorkflowParser.SelectClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_selectClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(WorkflowParser.SELECT)
            self.state = 109
            self.selectFields()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SelectFieldsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STAR(self):
            return self.getToken(WorkflowParser.STAR, 0)

        def field(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkflowParser.FieldContext)
            else:
                return self.getTypedRuleContext(WorkflowParser.FieldContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(WorkflowParser.COMMA)
            else:
                return self.getToken(WorkflowParser.COMMA, i)

        def getRuleIndex(self):
            return WorkflowParser.RULE_selectFields

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelectFields" ):
                listener.enterSelectFields(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelectFields" ):
                listener.exitSelectFields(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSelectFields" ):
                return visitor.visitSelectFields(self)
            else:
                return visitor.visitChildren(self)




    def selectFields(self):

        localctx = WorkflowParser.SelectFieldsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_selectFields)
        self._la = 0 # Token type
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [38]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(WorkflowParser.STAR)
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.field()
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==31:
                    self.state = 113
                    self.match(WorkflowParser.COMMA)
                    self.state = 114
                    self.field()
                    self.state = 119
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHERE(self):
            return self.getToken(WorkflowParser.WHERE, 0)

        def condition(self):
            return self.getTypedRuleContext(WorkflowParser.ConditionContext,0)


        def getRuleIndex(self):
            return WorkflowParser.RULE_whereClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereClause" ):
                listener.enterWhereClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereClause" ):
                listener.exitWhereClause(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhereClause" ):
                return visitor.visitWhereClause(self)
            else:
                return visitor.visitChildren(self)




    def whereClause(self):

        localctx = WorkflowParser.WhereClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_whereClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(WorkflowParser.WHERE)
            self.state = 123
            self.condition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(WorkflowParser.IF, 0)

        def condition(self):
            return self.getTypedRuleContext(WorkflowParser.ConditionContext,0)


        def THEN(self):
            return self.getToken(WorkflowParser.THEN, 0)

        def LBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(WorkflowParser.LBRACE)
            else:
                return self.getToken(WorkflowParser.LBRACE, i)

        def RBRACE(self, i:int=None):
            if i is None:
                return self.getTokens(WorkflowParser.RBRACE)
            else:
                return self.getToken(WorkflowParser.RBRACE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkflowParser.StatementContext)
            else:
                return self.getTypedRuleContext(WorkflowParser.StatementContext,i)


        def ELSE(self):
            return self.getToken(WorkflowParser.ELSE, 0)

        def getRuleIndex(self):
            return WorkflowParser.RULE_ifStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStmt" ):
                listener.enterIfStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStmt" ):
                listener.exitIfStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = WorkflowParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.match(WorkflowParser.IF)
            self.state = 126
            self.condition()
            self.state = 127
            self.match(WorkflowParser.THEN)
            self.state = 128
            self.match(WorkflowParser.LBRACE)
            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5116) != 0):
                self.state = 129
                self.statement()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(WorkflowParser.RBRACE)
            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 136
                self.match(WorkflowParser.ELSE)
                self.state = 137
                self.match(WorkflowParser.LBRACE)
                self.state = 141
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & 5116) != 0):
                    self.state = 138
                    self.statement()
                    self.state = 143
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 144
                self.match(WorkflowParser.RBRACE)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConditionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(WorkflowParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(WorkflowParser.ExpressionContext,i)


        def LOGICAL_OP(self, i:int=None):
            if i is None:
                return self.getTokens(WorkflowParser.LOGICAL_OP)
            else:
                return self.getToken(WorkflowParser.LOGICAL_OP, i)

        def getRuleIndex(self):
            return WorkflowParser.RULE_condition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondition" ):
                listener.enterCondition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondition" ):
                listener.exitCondition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondition" ):
                return visitor.visitCondition(self)
            else:
                return visitor.visitChildren(self)




    def condition(self):

        localctx = WorkflowParser.ConditionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_condition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.expression()
            self.state = 152
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 148
                self.match(WorkflowParser.LOGICAL_OP)
                self.state = 149
                self.expression()
                self.state = 154
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
